--- a/src/Shared/Shared.Core/Shared.Core.csproj
+++ b/src/Shared/Shared.Core/Shared.Core.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Ardalis.SmartEnum" Version="2.0.1" />
+      <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="5.2.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
