Update docker-compose. Add database dockerfile

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,14 +3,14 @@ version: "3.8"
 services:
   api:
     build:
-      context: .
       dockerfile: api.dockerfile
     ports:
       - "5000:5000"
     environment:
       ConnectionStrings__postgres: "Host=db;Username=postgres;Password=postgres;Database=my_bsnu"
   db:
-    image: postgres:13
+    build:
+      dockerfile: db.dockerfile
     ports:
       - "5432:5432"
     restart: on-failure
